# formulary

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
docs/: agent-reference.md  registry-on-workers.md  registry-policy.md
docs/superpowers/plans/: 2026-05-11-formulary-reconciler-contract.md
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
src/formulary/: config.py
src/formulary/bundling/: packager.py
src/formulary/cli/: __main__.py  main.py  profile_commands.py
src/formulary/domain/: errors.py  models.py
src/formulary/github/: client.py
src/formulary/profiles/: __init__.py  auth.py  manager.py  models.py  store.py
src/formulary/refactoring/: parser.py  refactorer.py  tokenizer.py
src/formulary/registry/: cache.py  client.py  github.py
src/formulary/resolution/: provider.py  resolver.py
src/formulary/services/: dev.py  info.py  install.py  publish.py  remove.py  self.py  upgrade.py
src/formulary/sheets/: client.py  driver.py  metadata.py
src/formulary/ui/: __init__.py  progress.py
src/formulary/utils/: hash.py
tests/: probe_registry.py  test_domain_models.py  test_packager.py  test_progress.py  test_progress_integration.py  test_publish_service.py  test_registry_cache.py  test_registry_live.py  test_remove_service.py  test_resolution.py  test_specifier.py  test_upgrade_service.py  test_utils.py
