[project]
name = "formulary"
version = "0.1.0"
description = "a package manager for google sheets"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "packaging>=25.0",
    "platformdirs>=4.3.8",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "resolvelib>=1.2.0",
    "rich>=14.1.0",
    "tomlkit>=0.13.3",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formulary"]
